flow_apps/PersonalWorkflow/force-app/main/default/objects/PersonalWorkflowTrigger__c/PersonalWorkflowTrigger__c.object-meta.xml
<CustomObject>
    <label>Personal Workflow Trigger</label>
    <nameField>
        <label>Personal Workflow Trigger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Personal Workflow Triggers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>