flow_apps/PersonalWorkflow/force-app/main/default/objects/PersonalWorkflowTrigger__c/fields/Personal_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Personal_Workflow__c</fullName>
    <label>Personal Workflow</label>
    <referenceTo>PersonalWorkflow__c</referenceTo>
    <relationshipLabel>Personal Workflow Triggers</relationshipLabel>
    <relationshipName>Personal_Workflow_Triggers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>