flow_apps/PersonalWorkflow/force-app/main/default/objects/PersonalWorkflowTrigger__c/fields/TriggerCriteriaFormula__c.field-meta.xml
<CustomField>
    <fullName>TriggerCriteriaFormula__c</fullName>
    <label>TriggerCriteriaFormula</label>
    <length>60</length>
    <type>Text</type>
</CustomField>