flow_apps/PersonalWorkflow/force-app/main/default/objects/PersonalWorkflowTrigger__c/fields/TriggerFilterType__c.field-meta.xml
<CustomField>
    <fullName>TriggerFilterType__c</fullName>
    <description>Determines whether or not the trigger has some filter criteria</description>
    <label>TriggerFilterType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Expression</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>