flow_apps/PersonalWorkflow/force-app/main/default/objects/PersonalWorkflowTrigger__c/fields/TriggeringEvents__c.field-meta.xml
<CustomField>
    <fullName>TriggeringEvents__c</fullName>
    <label>TriggeringEvents</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Create</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>CreateAndUpdate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>