flow_apps/PersonalWorkflow/force-app/main/default/objects/PersonalWorkflowTrigger__c/fields/TriggerObjectName__c.field-meta.xml
<CustomField>
    <fullName>TriggerObjectName__c</fullName>
    <label>TriggerObjectName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>