flow_apps/PersonalWorkflow/force-app/main/default/objects/PersonalWorkflowTrigger__c/fields/TriggerType__c.field-meta.xml
<CustomField>
    <fullName>TriggerType__c</fullName>
    <label>TriggerTiming</label>
    <length>40</length>
    <type>Text</type>
</CustomField>