flow_apps/PersonalWorkflow/force-app/main/default/objects/PersonalWorkflowTrigger__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TriggerObjectName__c</columns>
    <columns>TriggerType__c</columns>
    <columns>TriggeringEvents__c</columns>
    <columns>TriggerFilterType__c</columns>
    <columns>TriggerCriteriaFormula__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Personal_Workflow__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>